--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ This website is open-source at https://github.com/matthewzring/matthewzring.dev 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="images/favicon.ico">
+    <link href="images/favicon.ico" rel="shortcut icon">
     <title>matt</title>
 
     <!-- Gonna be 100% honest here, these meta tags are just to make the embed in Discord look good. -->
