Open links in new tab

--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@ This website is open-source at https://github.com/matthewzring/matthewzring.dev 
             <p>I'm a <span class="typed" data-typed-items="Software Architect, Security Engineer, Gamer"></span></p>
             <!-- Also, I like hiding things in comments, apparently. -->
             <div class="social-links">
-                <a href="mailto:m@tthewzri.ng"                         ><i class="fas fa-envelope"></i></a>
-                <a href="https://github.com/matthewzring/"             ><i class="fab fa-github"></i></a>
-                <a href="https://discord.com/users/349007194768801792" ><i class="fab fa-discord"></i></a>
-                <a href="https://keybase.io/matthewzring"              ><i class="fab fa-keybase"></i></a>
-                <a href="https://www.linkedin.com/in/matthewzring/"    ><i class="fab fa-linkedin-in"></i></a>
-                <a href="https://blog.matthewzring.dev"                ><i class="fas fa-rss"></i></a>
+                <a href="mailto:m@tthewzri.ng"                         target="_blank"><i class="fas fa-envelope"></i></a>
+                <a href="https://github.com/matthewzring/"             target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://discord.com/users/349007194768801792" target="_blank"><i class="fab fa-discord"></i></a>
+                <a href="https://keybase.io/matthewzring"              target="_blank"><i class="fab fa-keybase"></i></a>
+                <a href="https://www.linkedin.com/in/matthewzring/"    target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://blog.matthewzring.dev"                target="_blank"><i class="fas fa-rss"></i></a>
             </div>
         </div>
     </section>
